feat(gui): 重构游戏统计面板界面并添加纹理配置功能
- 重构 GeneralStatsPanel 界面，实现更美观的卡片式布局
- 添加平滑滚动条功能和改进的鼠标交互体验
- 实现 ConfigTexture 类用于从配置目录加载自定义纹理
- 添加 BlurredConfigTexture 支持模糊效果的配置纹理
- 添加 EmptyTexture 用于隐藏默认Mojang标志
- 更新 nametag 相关包路径引用
- 在 fabric.mod.json 中添加新的 mixin 配置文件
- 初始化客户端配置目录并复制默认背景纹理